--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "commander": "^11.0.0",
-    "nanoid": "^4.0.2"
+    "nanoid": "^4.0.2",
+    "process": "^0.11.10"
   }
 }
